# keya

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  TODO.md  kshell.py  pyproject.toml
demos/: README.md  TESLA_README.md  cellular.py  debug_infinity.py  demo-mantissa-quantum.py  demo-orbital.py  demo-quantum-phenomena.py  demo-sierpinski.py  demo-symbol-translation.keya  demo-test-evolution.keya  demo_cellular_widgets.py  demo_floating_point_dc.py  demo_mantissa_quantum.py  demo_orbital.py  demo_quantum_phenomena.py  demo_sierpinski.py  display-modes.py  evolution.keya  floatingpoint-dc.py  floatingpoint.py  infinity.py  kshell.py  mantissa-quantum.py  mantissa.py  orbital.py  pascal.py  pascal_iterators.py  pascal_runner.py  primality.py  quantum-phenomena.py  quantum.py  report.py  run-demo.py  run_demo.py  sierpinski.py  simple_evolution.keya  symbol-to-symbol.py  symbol-translation.keya  symbol.py  test_pipeline.keya  (+1 more)
demos/kshell/: evolution.keya  grid.keya  window.keya
demos/reporting/: builder.py  registry.py
docs/: report.html
keya/: resolver.py  symbolic.py
keya/core/: engine.py  operators.py
keya/dsl/: __init__.py  ast.py  parser.py
keya/kernel/: attractor.py  cyclotomic.py  digitalroot.py  field.py  kernel.py  operators.py
keya/kshell/: ast.py  engine.py  parser.py
keya/pascal/: cyclotomic.py  field.py  kernel.py  operators.py
keya/quantum/: __init__.py  orbital.py  quantumdc.py  renderer.py  wavefunction.py
keya/reporting/: registry.py
keya/shell/: patterns.py  repl.py  router.py  symbols.py  workspace.py
keya/vis/: renderer.py
keya/widgets/: __init__.py  cellular.py  renderer.py
makedir/: biflow.mk  latex.mk
paper/: Makefile  appendix.tex  conclusion.tex  foundations.tex  homology.tex  kéya.tex  results.tex  theorems.tex  toc.py
scripts/: playwrap.py  spacecasebaserace.txt
tests/: test_matplotlib_3d_types.py
tests/integration/: test_full_system.py  test_infinity.py  test_kshell_pipeline.py
tests/unit/: test_arithmetic.py  test_cyclotomic_arithmetic.py  test_dc_operators.py  test_jax_integration.py  test_kernel_operators.py  test_kshell_parser.py  test_operators.py  (+3 more)
typings/: README.md  __init__.py
(+23 files in other folders)
