[project]
name = "keya"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jax>=0.6.2",
    "jax-metal>=0.1.1",
    "jaxlib>=0.6.2",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "prompt-toolkit>=3.0.47",
    "sympy>=1.10.1",
    "scipy>=1.9.1",
    "nltk>=3.8.1",
]
