[project]
name = "keya"
version = "0.1.0"
description = "Experimental programming language based on the Σ-Calculus"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.13"
dependencies = [
    "jax>=0.4.35",
    "jaxlib>=0.4.35",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "prompt-toolkit>=3.0.47",
    "sympy>=1.10.1",
    "scipy>=1.9.1",
    "nltk>=3.8.1",
]
